--- a/aulasjsfprimefaces/src/main/webapp/WEB-INF/web.xml
+++ b/aulasjsfprimefaces/src/main/webapp/WEB-INF/web.xml
@@ -141,6 +141,11 @@
 		<param-value>smoothness</param-value>
 	</context-param>
 
+	<context-param>
+		<param-name>javax.faces.FACELETS_LIBRARIES</param-name>
+		<param-value>/WEB-INF/springsecurity.taglib.xml</param-value>
+	</context-param>
+
 
 
 	<!-- ========================================================== 🧱 Filtros 
